--- a/public/styles/list.css
+++ b/public/styles/list.css
@@ -125,7 +125,9 @@ a.trail:first-child {
 
 .trail .trailicon {
     width: 90px;
+    min-width: 90px;
     height: 90px;
+    min-height: 90px;
     border-radius: 6px;
     margin-right: 12px;
     background-color: gray;
