--- a/public/styles/list.css
+++ b/public/styles/list.css
@@ -136,3 +136,9 @@ a.trail:first-child {
     background-image: url(https://placehold.co/200x200?text=?);
     border: 1px solid darkgrey;
 }
+
+@media (max-width: 500px) {
+  .app { 
+    padding: 6vmin;
+  }
+}
